--- a/behavior_pack/entities/applesnale.json
+++ b/behavior_pack/entities/applesnale.json
@@ -1,5 +1,5 @@
 {
-  "format_version": "1.10.0",
+  "format_version": "1.16.100",
   "minecraft:entity": {
     "description": {
       "identifier": "gaiawanderer:applesnale",
@@ -83,9 +83,31 @@
       "minecraft:nameable": {
       },
       "minecraft:physics": {
+      },
+      "minecraft:damage_sensor": {
+        "triggers": {
+          "cause": "fall",
+          "deals_damage": false
+        }
+      },
+      "minecraft:on_death": {
+        "event": "death_event"
       }
     },
     "events": {
+      "death_event": {
+        "randomize": [
+          {
+            "weight": 99
+          },
+          {
+            "weight": 1,
+            "run_command": {
+              "command": "structure load mystructure:book_applesnale ~ ~ ~"
+            }
+          }
+        ]
+      },
       "become_normal": {
         "add": { "component_groups": [ "normal" ] }
       },
