宝物樽を解錠するシステムを変更

--- a/behavior_pack/loot_tables/chests/barrel_treasure_box.json
+++ b/behavior_pack/loot_tables/chests/barrel_treasure_box.json
@@ -139,6 +139,11 @@
         },
         {
           "type": "item",
+          "name": "gaiawanderer:rare_key",
+          "weight": 1
+        },
+        {
+          "type": "item",
           "name": "minecraft:saddle",
           "weight": 15
         },
